--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,7 +154,7 @@ nav {
   padding: 40px 20px;
   border-radius: 15px;
   box-shadow: 0 0 40px rgba(254, 253, 209, 0.6);
-  border: 1px solid rgba(170, 66, 18, 0.6);
+  /* border: 1px solid rgba(170, 66, 18, 0.6); */
   transition: all 0.3s;
 }
 .card:hover {
