--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@ nav {
   width: 100%;
   height: 20vh;
   background-color: transparent;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .NAV-part-1 a {
@@ -96,12 +96,14 @@ nav {
 .content-homepage h1 {
   padding-left: 30px;
   margin-top: 90px;
+  font-family: cursive;
   color: rgb(40, 19, 4);
 }
 .content-homepage p {
   padding-left: 30px;
   padding-top: 20px;
   color: indianred;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 .content-homepage .btn {
@@ -179,9 +181,8 @@ nav {
 
 /* sec4 */
 .sec4 {
-  /* padding: 3% 3%; */
   text-align: center;
-  border: 1px solid rgba(170, 66, 18, 0.6);
+  /* border: 1px solid rgba(170, 66, 18, 0.6); */
 }
 
 .sec4 h1 {
@@ -198,10 +199,6 @@ nav {
   justify-content: space-evenly;
   width: 900px;
 }
-
-/* .video-container source {
-  width: 50%;
-} */
 
 /* sec5 */
 .sec5 {
@@ -273,4 +270,62 @@ nav {
   padding: 10px 20px;
   background-color: rgb(43, 17, 17);
   cursor: pointer;
+}
+
+/* sec6 footer*/
+.sec6 {
+  padding: 1% 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sec6 img {
+  width: 150px;
+}
+.sec6 div {
+  width: 150px;
+}
+.sec6 ul li:first-child {
+  margin-top: 50px;
+  font-weight: 550;
+  list-style: none;
+  color: rgb(43, 17, 17);
+  font-family: cursive;
+}
+
+.sec6 li,
+.sec6 p {
+  padding: 10px 0;
+  padding-left: 16px;
+  list-style: none;
+}
+
+.sec6 p,
+.sec6 a {
+  color: darkgrey;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.sec6 a:hover {
+  color: indianred;
+  cursor: pointer;
+}
+.sec6 p:hover {
+  color: indianred;
+  cursor: pointer;
+}
+
+.footer {
+  text-align: center;
+  padding-bottom: 5px;
+  margin-top: 1px;
+  height: 60px;
+  font-size: 14px;
+
+  background-color: indianred;
+  color: rgb(43, 17, 17);
+}
+.footer p {
+  padding: 25px;
 }
