--- a/CSS/reservation.css
+++ b/CSS/reservation.css
@@ -1,8 +1,8 @@
 * {
   margin: 0px;
   padding: 0px;
-
-  box-sizing: border-box;
+  text-decoration-line: none;
+  /* box-sizing: border-box; */
 }
 body {
   /* background: linear-gradient(45deg, white 70%, rgb(277, 233, 209)); */
@@ -18,6 +18,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 20vh;
+
   /* background-color: rgb(255, 87, 87); */
 }
 
@@ -88,12 +89,12 @@ nav {
 
 .booking-container {
   display: flex;
-  min-height: 100vh;
+  min-height: 140vh;
 }
 .booking {
   width: 100%;
   height: 100vh;
-  /* background: linear-gradient(to bottom, white -100%, transparent); */
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,8 +110,9 @@ nav {
 }
 
 .booking form h2 {
-  margin-bottom: 20px;
-  font-size: 30px;
+  margin-bottom: 35px;
+  font-size: 40px;
+  font-family: cursive;
   color: rgb(43, 17, 17);
   text-align: center;
 }
@@ -122,13 +124,36 @@ nav {
   justify-content: center;
 }
 
-.booking form input {
+.booking form input,
+.booking form textarea {
   width: 50%;
   padding: 15px;
   margin: 5px;
   outline: none;
   border: none;
   border-radius: 5px;
+}
+
+.booking form textarea {
+  resize: none;
+  width: 100%;
+}
+
+.booking form .btn {
+  display: block;
+  border-radius: 30px;
+  margin-top: 30px;
+  width: 150px;
+  text-align: center;
+  padding: 10px;
+  background-color: rgb(40, 19, 4);
+  color: white;
+}
+
+.booking form .btn:hover {
+  background-color: rgb(255, 87, 87);
+
+  transform: translateX(0px);
 }
 
 /* footer */
@@ -141,7 +166,10 @@ nav {
 }
 
 .sec6 img {
-  width: 150px;
+  width: 100px;
+  border-radius: 80px;
+  height: 18vh;
+  margin-top: 35px;
 }
 .sec6 div {
   width: 150px;
@@ -150,7 +178,7 @@ nav {
   margin-top: 50px;
   font-weight: 550;
   list-style: none;
-  color: rgb(43, 17, 17);
+  color: indianred;
   font-family: cursive;
 }
 
@@ -163,7 +191,7 @@ nav {
 
 .sec6 p,
 .sec6 a {
-  color: darkgrey;
+  color: white;
   font-size: 14px;
   line-height: 20px;
 }
@@ -179,7 +207,7 @@ nav {
 
 .footer {
   text-align: center;
-  /* padding-bottom: 5px; */
+
   margin-top: 1px;
   height: 60px;
   font-size: 18px;
